--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@mantine/tiptap": "^7.3.2",
     "@next/font": "^14.0.4",
     "@tabler/icons-react": "^2.44.0",
+    "@tanstack/react-query": "^5.14.6",
     "@tiptap/extension-link": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
+    "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "geist": "^1.2.0",
     "lucide-react": "^0.302.0",
     "manthemes": "1.2.3-alpha.1",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.0",
