--- a/package.json
+++ b/package.json
@@ -43,6 +43,13 @@
     "postcss-preset-mantine": "^1.12.2",
     "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "eslint-plugin-sonarjs": "^0.21.0",
+    "eslint-plugin-unicorn": "^48.0.1",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "@trivago/prettier-plugin-sort-imports": "4.2.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "@types/eslint": "^8.44.2"
   }
 }
